# evmgod

./: .gitignore  .gitmodules  Cargo.toml  README.md
opcode/Counter.sol/: op.txt
opcode/evmthroughctfs1/: op.txt
opcode/evmthroughctfs2/: metamorphic_op.txt
solidity/src/: Attacks.sol  Board.sol  Bye.sol  Bye2-2.sol  Bye2.sol  CodeHash.sol  CodeIsNotLaw.sol  Constructor.sol  ERC20.sol  Fleet.sol  Game.sol  IGeneral.sol  OnlyImAllowedToHaveTokens1.sol  Redeploy.sol  create2.sol  deploy_bytecode.sol
solidity/test/: CodeIsNotLaw.t.sol  Constructor.t.sol  Redeploy.t.sol
src/byte/: Cargo.toml
src/byte/src/: main.rs
src/evmthroughctfs1/: Cargo.toml
src/evmthroughctfs1/src/: main.rs
src/evmthroughctfs2/: Cargo.toml
src/evmthroughctfs2/src/: main.rs
src/evmthroughctfs2_1/: Cargo.toml
src/evmthroughctfs2_1/src/: main.rs
src/evmthroughctfs2_2/: Cargo.toml
src/evmthroughctfs2_2/src/: main.rs
src/revmdemo/: Cargo.toml
src/signextend/: Cargo.toml
src/signextend/src/: main.rs
