[package]
name = "evmthroughctfs2_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ethers = "1.0"
hex = "0.4.3"
tokio = { version = "1.24", default-features = false, features = [
    "rt",
    "macros",
] }
