[package]
name = "revmdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
anyhow = "1.0"
bytes = "1.3"
ethers = "1.0"
hex = "0.4"
revm = { git = "https://github.com/bluealloy/revm", rev = "329fd94", features = [
    "ethersdb",
] }
tokio = { version = "1.24", default-features = false, features = [
    "rt",
    "macros",
] }
